versioned_docs/version-7.1/client-api/changes/content/_what-is-changes-api-csharp.mdx
import Admonition from '@theme/Admonition';
import Panel from "@site/src/components/Panel";

<Admonition type="note" title="">

* The Changes API is a Push Notifications service, that allows a RavenDB Client to 
  receive messages from a RavenDB Server regarding events that occurred on the server.  
* A client can subscribe to events related to documents, indexes, operations, counters, and time series.  
* Using the Changes API allows you to notify users of various changes without requiring 
  any expensive polling.  

<Admonition type="warning" title="">
The `Subscribe` method on the observables the Changes API returns accepts only an `IObserver`
object by default.  
To instead subscribe with a delegate, like the `change => ...` lambda used in the examples below,
add the [System.Reactive](https://www.nuget.org/packages/System.Reactive/) package to your project.  
This adds `Subscribe` overloads that take delegates, including ones with error and
completion handlers.  
</Admonition>

* In this article:  
  * [Accessing Changes API](../../../client-api/changes/what-is-changes-api.mdx#accessing-changes-api)  
  * [Connection interface](../../../client-api/changes/what-is-changes-api.mdx#connection-interface)  
  * [Subscribing](../../../client-api/changes/what-is-changes-api.mdx#subscribing)  
  * [Unsubscribing](../../../client-api/changes/what-is-changes-api.mdx#unsubscribing)  
  * [Changes API and Database Timeout](../../../client-api/changes/what-is-changes-api.mdx#changes-api-and-database-timeout)  
  * [Changes API -vs- Data Subscriptions](../../../client-api/changes/what-is-changes-api.mdx#changes-api--vs--data-subscriptions)  

</Admonition>

<Panel heading="Accessing Changes API">

The changes subscription is accessible by a document store through its `IDatabaseChanges` 
or `ISingleNodeDatabaseChanges` interfaces.

```csharp
IDatabaseChanges Changes(string database = null);

ISingleNodeDatabaseChanges Changes(string database, string nodeTag);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **database** | `string` | Name of database to open changes API for. If `null`, the `Database` configured in DocumentStore will be used. |
| **nodeTag** | `string` | Tag of the cluster node to open changes API for. |

| Return value | |
| ------------- | ----- |
| `IDatabaseChanges` | Instance implementing `IDatabaseChanges` interface. |
| `ISingleNodeDatabaseChanges` | Instance implementing `ISingleNodeDatabaseChanges` interface. |

* Use `IDatabaseChanges` to subscribe to database changes.  
* Use `ISingleNodeDatabaseChanges` to limit tracking to a specific node.  
  <Admonition type="note" title="">
  Note that from RavenDB 6.2 on, some changes can be tracked not cross-cluster but only 
  **on a specific node**. In these cases, it is required that you open the Changes API using 
  the second overload, passing both a database name and a node tag: `store.Changes(dbName, nodeTag)`  
  </Admonition>

</Panel>

<Panel heading="Connection interface">

`IDatabaseChanges` inherits from `IConnectableChanges<TChanges>` interface that represent the connection.

```csharp
public interface IConnectableChanges<TChanges> : IDisposable
    where TChanges : IDatabaseChanges
{
    // returns state of the connection
    bool Connected { get; }

    // A task that ensures that the connection to the server was established.
    Task<TChanges> EnsureConnectedNow();

    //An event handler to detect changed to the connection status
    event EventHandler ConnectionStatusChanged;

    //An action to take if an error occured in the connection to the server
    event Action<Exception> OnError;
}
```

</Panel>

<Panel heading="Subscribing">

To receive notifications regarding server-side events, subscribe using one of the following methods.  

* **For Document Changes:**  
   - [ForAllDocuments](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#foralldocuments)  
     Track changes for all document  
   - [ForDocument](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocument)  
     Track changes for a given document (by Doc ID)  
   - [ForDocumentsInCollection](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocumentsincollection)  
     Track changes for all documents in a given collection  
   - [ForDocumentsStartingWith](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocumentsstartingwith)  
     Track changes for documents whose ID contains a given prefix  

* **For Index Changes:**  
   - [ForAllIndexes](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#forallindexes)  
     Track changes for all indexes  
   - [ForIndex](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#forindex)  
     Track changes for a given index (by Index Name)   

* **For Operation Changes:**  
  Operation changes can be tracked only [on a specific node](../../../client-api/changes/what-is-changes-api.mdx#accessing-changes-api).  
   - [ForAllOperations](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foralloperations)  
     Track changes for all operation  
   - [ForOperationId](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foroperationid)  
     Track changes for a given operation (by Operation ID)  

* **For Counter Changes:**  
   - [ForAllCounters](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forallcounters)  
     Track changes for all counters  
   - [ForCounter](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forcounter)  
     Track changes for a given counter (by Counter Name)  
   - [ForCounterOfDocument](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forcounterofdocument)  
     Track changes for a specific counter of a chosen document (by Doc ID and Counter Name)  
   - [ForCountersOfDocument](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx#forcountersofdocument)  
     Track changes for all counters of a chosen document (by Doc ID)  

* **For Time Series Changes:**  
   - [ForAllTimeSeries](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#foralltimeseries)  
     Track changes for all time series  
   - [ForTimeSeries](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#fortimeseries)  
     Track changes for all time series with a given name  
   - [ForTimeSeriesOfDocument](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#fortimeseriesofdocument)  
     Track changes for -  
      * a **specific time series** of a given document (by Doc ID and Time Series Name)  
      * **any time series** of a given document (by Doc ID)  

</Panel>

<Panel heading="Unsubscribing">

To end a subscription (stop listening for particular notifications) you must 
`Dispose` of the subscription.  

```csharp
IDatabaseChanges changes = store.Changes();
await changes.EnsureConnectedNow();
var subscription = changes
        .ForAllDocuments()
        .Subscribe(change => Console.WriteLine("{0} on document {1}", change.Type, change.Id));
try
{
    // application code here
}
finally
{
    if (subscription != null)
        subscription.Dispose();
}
```

</Panel>

<Panel heading="Changes API and Database Timeout">

One or more open Changes API connections will prevent a database from becoming 
idle and unloaded, regardless of [the configuration value for database idle timeout](../../../server/configuration/database-configuration.mdx#databasesmaxidletimeinsec).  

</Panel>

<Panel heading="Changes API -vs- Data Subscriptions">

**Changes API** and [Data Subscription](../../../client-api/data-subscriptions/what-are-data-subscriptions.mdx) 
are services that a RavenDB Server provides subscribing clients.  
Both services respond to events that take place on the server, by sending updates 
to their subscribers.  

* **Changes API is a Push Notifications Service**.  
   * Changes API subscribers receive **notifications** regarding events that 
     took place on the server, without receiving the actual data entities 
     affected by these events.  
     For the modification of a document, for example, the client will receive 
     a [DocumentChange](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx#documentchange-and-documentchangetypes-syntax) 
     object with details like the document's ID and collection name.  

   * The server does **not** keep track of sent notifications or 
     checks clients' usage of them. It is a client's responsibility 
     to manage its reactions to such notifications.  

* **Data Subscription is a Data Consumption Service**.  
   * A Data Subscription task keeps track of document modifications in the 
     database and delivers the documents in an orderly fashion when subscribers 
     indicate they are ready to receive them. 
   * The process is fully managed by the server, leaving very little for 
     the subscribers to do besides consuming the delivered documents.  

|                              | Data Subscriptions                                                                                                                                                                                              | Changes API                                                                                                                                                                                                                          |
|------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| What can the server Track    | [Documents](../../../client-api/data-subscriptions/what-are-data-subscriptions.mdx#documents-processing) <br/> [Revisions](../../../client-api/data-subscriptions/advanced-topics/subscription-with-revisioning.mdx) <br/> [Counters](../../../client-api/data-subscriptions/creation/examples.mdx#including-counters) <br/> Time Series | [Documents](../../../client-api/changes/how-to-subscribe-to-document-changes.mdx) <br/> [Indexes](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx) <br/> [Operations](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx) <br/> [Counters](../../../client-api/changes/how-to-subscribe-to-counter-changes.mdx) <br/> [Time Series](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx) |
| What can the server Deliver  | Documents <br/> Revisions <br/> Counters <br/> Time Series                                                                                                                                                       | Notifications                                                                                                                                                                                                                        |
| Management                   | Managed by the Server                                                                                                                                                                                           | Managed by the Client                                                                                                                                                                                                                |

</Panel>
